<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Prospecto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prospectoNombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actualizarProspectoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="25sp"
                android:enabled="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prospectoApellidoP">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actualizarProspectoApellidoP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="25sp"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prospectoApellidoM">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actualizarProspectoApellidoM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="25sp"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prospectoCalle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actualizarProspectoCalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="25sp"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prospectoNumero">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actualizarProspectoNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="25sp"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prospectoColonia">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actualizarProspectoColonia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="25sp"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prospectoCodigoPostal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actualizarProspectoCodigoPostal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="25sp"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prospectoTelefono">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actualizarProspectoTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="25sp"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prospectoRFC">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actualizarProspectoRFC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="25sp"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/actualizarProspectoAutorizar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/actualizarProspectoAutorizar"/>

            <View
                android:layout_width="45dp"
                android:layout_height="0dp"/>

            <Button
                android:id="@+id/actualizarProspectoRechazar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/actualizarProspectoRechazar"/>

        </LinearLayout>

    </LinearLayout>



</ScrollView>